--- a/angular.json
+++ b/angular.json
@@ -24,12 +24,21 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/app/Images/Account.png",
+              "src/app/Images/logIn.png",
+              "C:/Users/gholz/sportify/src/app/Images/Orders.PNG",
+              "src/app/Images/Search.png",
+              "src/app/Images/ShoppingCart.png"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
+
+            ]
           },
           "configurations": {
             "production": {
