--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
+              "C:/Users/gholz/sportify/src/app/Images/razer.png",
               "src/app/Images/Account.png",
               "src/app/Images/logIn.png",
               "C:/Users/gholz/sportify/src/app/Images/Orders.PNG",
@@ -34,7 +35,8 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
-            ],
+            ]
+            ,
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.js"
 
