--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.2.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.0",
+    "firebase": "^9.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
