--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/router": "~12.2.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.0",
-    "firebase": "^9.1.3",
+    "firebase": "^9.2.0",
+    "firebase-tools": "^9.21.0",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
